// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DescribeElement renders correct snapshot 1`] = `
<div>
  <div>
    <div
      class="DescribeElementSegment-inner-6"
    >
      <div
        class="DescribeElement-contentContainer-2"
      >
        <h4
          class="MuiTypography-root DescribeElement-title-1 MuiTypography-h4"
        >
          cardTitle
        </h4>
        <div
          class="DescribeElement-cardContainer-3"
        >
          <div>
            DescribeElementCard mock 
            {"icon":"people","title":"expectedTitle","content":"expectedContent"}
          </div>
          <div>
            DescribeElementCard mock 
            {"title":"anotherTitle","content":"moreContent","links":[{"displayName":"displayName","href":"address"}]}
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DescribeElement renders correct snapshot with switches 1`] = `
<div>
  <div
    class="DescribeElementSegment-outerDark-40"
  >
    <div
      class="DescribeElementSegment-inner-42"
    >
      <div
        class="DescribeElement-contentContainer-38"
      >
        <h4
          class="MuiTypography-root DescribeElement-title-37 MuiTypography-h4"
        >
          cardTitle
        </h4>
        <div
          class="DescribeElement-cardContainer-39"
        >
          <div>
            DescribeElementCard mock 
            {"icon":"people","title":"expectedTitle","content":"expectedContent","quote":true,"media":true}
          </div>
          <div>
            DescribeElementCard mock 
            {"title":"anotherTitle","content":"moreContent","links":[{"displayName":"displayName","href":"address"}],"quote":true,"media":true}
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
